@@ -31,6 +31,7 @@ import org.slf4j.LoggerFactory;
 
 import org.apache.cassandra.auth.*;
 import org.apache.cassandra.db.virtual.VirtualSchemaKeyspace;
+import org.apache.cassandra.exceptions.RequestExecutionException;
 import org.apache.cassandra.schema.TableMetadata;
 import org.apache.cassandra.schema.TableMetadataRef;
 import org.apache.cassandra.config.DatabaseDescriptor;
@@ -323,10 +324,22 @@ public class ClientState
      */
     public void login(AuthenticatedUser user)
     {
-        if (user.isAnonymous() || user.canLogin())
+        if (user.isAnonymous() || canLogin(user))
             this.user = user;
         else
             throw new AuthenticationException(String.format("%s is not permitted to log in", user.getName()));
+    }
+
+    private boolean canLogin(AuthenticatedUser user)
+    {
+        try
+        {
+            return user.canLogin();
+        }
+        catch (RequestExecutionException e)
+        {
+            throw new AuthenticationException("Unable to perform authentication: " + e.getMessage(), e);
+        }
     }
 
     public void ensureAllKeyspacesPermission(Permission perm)
